--- a/force-app/main/default/lwc/gridHomePage/gridHomePage.html
+++ b/force-app/main/default/lwc/gridHomePage/gridHomePage.html
@@ -1,6 +1,7 @@
 <template>
 	<c-onboarding-task-tile></c-onboarding-task-tile>
 	<c-my-active-goals></c-my-active-goals>
+	<c-offboarding-tile></c-offboarding-tile>
 	<c-resource-card-tile></c-resource-card-tile>
 	<div class="slds-grid slds-gutters">
 		
