--- a/force-app/main/default/lwc/progressBarApplicant/progressBarApplicant.html
+++ b/force-app/main/default/lwc/progressBarApplicant/progressBarApplicant.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card  title="Pre onboarding progress status" >
         <div class="slds-p-left_large  slds-p-right_large"  >
-        <lightning-progress-bar value={progressValue} size="large" variant="circular"></lightning-progress-bar>
+        <lightning-progress-bar value={progressValue} size="large" name="progress" variant="circular"></lightning-progress-bar>
     </div>
     </lightning-card>
 </template>
