--- a/force-app/main/default/lwc/goalMetrics/goalMetrics.html
+++ b/force-app/main/default/lwc/goalMetrics/goalMetrics.html
@@ -6,7 +6,7 @@
           <div class="childtext" style="padding-left:20px;">
                <div style="padding-left:5px;"> 
           <lightning-icon icon-name="standard:goals" size="medium" alternative-text="In Progress" ></lightning-icon>
-           <font size="4"  > &nbsp;&nbsp;<b>Goals and Metrics </b> </font> <br/><br/>
+           <font size="4"  > &nbsp;&nbsp;<b>Goals</b> </font> <br/><br/>
             </div> 
           </div>
            <div class="childimage">
