--- a/force-app/main/default/lwc/myCertificationsAndSkills/myCertificationsAndSkills.html
+++ b/force-app/main/default/lwc/myCertificationsAndSkills/myCertificationsAndSkills.html
@@ -16,7 +16,7 @@
 
      <div class="container">
     <div class="box" style="width:50%">  </div>
-    <div class="box" style="width:50%"> <lightning-button variant="brand" label="Add new Skill/Certification"  onclick={handleClick}></lightning-button> </div>
+    <div class="box" style="width:50%"> <lightning-button variant="brand" label="Add New Skill/Certification"  onclick={handleClick}></lightning-button> </div>
    
     <div style="clear: both;"></div> 
     </div>
@@ -84,7 +84,7 @@
                                             onclick={handleCancel} >
  
                     </lightning-button-icon>
-                <font size="5">New Expense</font>
+                <font size="5">New Skills/Certifications</font>
                 </header>
                 <div class="slds-modal__content slds-p-around_medium"
                     id="modal-content-id-1">
