--- a/force-app/main/default/lwc/serviceRequestChangeDetailsForm/serviceRequestChangeDetailsForm.html
+++ b/force-app/main/default/lwc/serviceRequestChangeDetailsForm/serviceRequestChangeDetailsForm.html
@@ -70,7 +70,7 @@
 										<strong>Updated Details</strong>
 										<lightning-record-edit-form object-api-name="Case" onsuccess={handleSuccess}
 											onerror={handleError} onsubmit={onSubmitHandler}>
-											<lightning-messages></lightning-messages>
+											<!--lightning-messages> </lightning-messages-->
 											<lightning-input-field field-name="Bank_Name__c" required>
 											</lightning-input-field>
 											<lightning-input-field field-name="Bank_Account_Number__c" required>
@@ -152,11 +152,11 @@
 								</lightning-datatable>
 								<strong>Enter Details</strong>
 
-								<lightning-record-edit-form object-api-name="Case" onsuccess={handleSuccess}
+								<lightning-record-edit-form object-api-name="Case" onsuccess={handleFamSuccess}
 									onerror={handleError} onsubmit={onSubmitHandler}>
 									<lightning-layout multiple-rows>
 										<lightning-layout-item size="6" class="slds-p-around_xx-small">
-											<lightning-messages></lightning-messages>
+											<!--lightning-messages> </lightning-messages-->
 											<lightning-input-field field-name="Family_Member_Name__c" required>
 											</lightning-input-field>
 											<lightning-input-field field-name="Is_It_Emergency_Contact__c"
