--- a/force-app/main/default/lwc/myActiveGoals/myActiveGoals.html
+++ b/force-app/main/default/lwc/myActiveGoals/myActiveGoals.html
@@ -7,7 +7,7 @@
                 
           </div>
            <div class="child2" style="width:95%">
-              <font size="4"><b>Goals and Metrics</b></font> <br/>
+              <font size="4"><b>Goals</b></font> <br/>
                <font color="grey"> Manage your Goals and keep a check of your metrics. </font>
            </div>
     </div>
