--- a/force-app/main/default/lwc/orgChart/orgChart.html
+++ b/force-app/main/default/lwc/orgChart/orgChart.html
@@ -1,7 +1,6 @@
 <template>
   <li>
     <ul>
-      <template if:true={hasReportsTo}>
       <template for:each={employee.meReportsToList} for:item="report">
         <li key={report.resourceUserId}>
           <c-org-chart employee={report}></c-org-chart>
@@ -9,7 +8,6 @@
             <line class="line" x1="50%" y1="80%" x2="50%" y2="100%"></line>
           </svg>-->
         </li>
-      </template>
       </template>
     </ul>
 
@@ -25,7 +23,7 @@
 
     <template if:true={hasHierarchy}>
         <br/>
-       <b> My Reportees </b>
+       <b> My Reporties </b>
     <!--  <svg>
         <line class="line" x1="50%" y1="0" x2="50%" y2="100%"></line>
       </svg> -->
