--- a/force-app/main/default/lwc/myExpenses/myExpenses.html
+++ b/force-app/main/default/lwc/myExpenses/myExpenses.html
@@ -137,12 +137,12 @@
                                
                                   <template if:true={showFileUpload}>
                                     <center style="font-size:14px;color:green"> <i> Succesfully created the expense. Please upload the proof for an expense. Proofs are optional but expense can be rejected without proofs. </i></center>
-                                  <div style="max-width:320px">
+                                  <div style="max-width:320px slds-align_absolute-center">
                                   <center> <lightning-file-upload name="fileUploader" accept={acceptedFormats} record-id={createdRecordId} onuploadfinished={handleUploadFinished} multiple></lightning-file-upload>
                                   </center>
                                   <br />
-                                  <lightning-button variant="brand" name="Close" label="Close" onclick={handleFinish}></lightning-button>
-                                    &nbsp; &nbsp; &nbsp;<lightning-button variant="brand" name="Submit" label="Submit" onclick={handleSubmittedFinish}></lightning-button>
+                               <center> <lightning-button variant="brand" name="Close" label="Close" onclick={handleFinish}></lightning-button>
+                                    &nbsp; &nbsp; &nbsp;<lightning-button variant="brand" name="Submit" label="Submit" onclick={handleSubmittedFinish}></lightning-button></center>
                                   </div>
                                   </template>
                     
