--- a/force-app/main/default/lwc/myExpenses/myExpenses.html
+++ b/force-app/main/default/lwc/myExpenses/myExpenses.html
@@ -15,7 +15,15 @@
         </div>
 
      <div class="container">
-    <div class="box" style="width:50%"> <font size="48px"><b> <lightning-formatted-number value={reimbursment} format-style="currency" currency-code={reimbCurrency}></lightning-formatted-number> </b></font> <i> <b></b></i> <br/> Reimbursement Pending </div>
+    <div class="box" style="width:50%;padding-left:10px;"> 
+      <font size="48px"><b> 
+        
+        <lightning-formatted-number value={reimbursment} format-style="currency" currency-code={reimbCurrency}></lightning-formatted-number>
+         </b></font>
+           <br/>
+         <div style ="text-align:left"> Reimbursement Pending </div>
+             </div>
+     
     <div class="box" style="width:50%;text-align:right;padding-right:10px"> <lightning-button variant="brand" label="New Claim"  onclick={handleClick}></lightning-button> </div>
    
     <div style="clear: both;"></div> 
