--- a/force-app/main/default/lwc/assignmentTile/assignmentTile.html
+++ b/force-app/main/default/lwc/assignmentTile/assignmentTile.html
@@ -6,10 +6,10 @@
   <div class="parent" key={prj.projectName}>
      <div class="slds-grid slds-grid_vertical-align-center" style="padding-left:12px;">  
     <template if:false={prj.isClient} >                            
-    <lightning-icon icon-name="action:follow" size="small" alternative-text="Internal" title="Internal"> </lightning-icon>
+    <lightning-icon icon-name="action:follow" size="small" alternative-text="Internal"> </lightning-icon>
     </template>
     <template if:true={prj.isClient}  >                            
-    <lightning-icon icon-name="action:following" size="small" alternative-text="Internal" title="Internal"> </lightning-icon>
+    <lightning-icon icon-name="action:following" size="small" alternative-text="Internal"> </lightning-icon>
     </template>
     <div style="padding-left:20px;" >
         <b><font size="3">{prj.projectName}</font></b><br/>
