--- a/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
+++ b/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.html
@@ -5,7 +5,7 @@
         <div class="childparent" >
            <div class="childtext">
       <div style="padding-left:5px;"> 
-          <lightning-icon icon-name="action:map" size="small" alternative-text="Internal" title="Internal">  </lightning-icon>
+          <lightning-icon icon-name="action:map" size="small">  </lightning-icon>
            <font size="4"  > &nbsp;&nbsp;<b>Upcoming Holidays </b> </font> <br/><br/>
             </div>
            </div>
