--- a/force-app/main/default/lwc/gridHomePage/gridHomePage.html
+++ b/force-app/main/default/lwc/gridHomePage/gridHomePage.html
@@ -7,7 +7,7 @@
 	<div class="slds-grid slds-gutters">
 		
 		<div class="slds-col slds-size_1-of-2">
-			<template if:true={hidetimeTab}>
+			<template if:false={hidetimeTab}>
 			<c-time-sheet-tile></c-time-sheet-tile>
 			</template>
 			<c-goal-metrics></c-goal-metrics>
